[package]
name = "rust_graphql_nft_server"
description = "A GraphQL server for getting NFT's metadata"
version = "1.0.1"
edition = "2021"
repository = "https://github.com/MarkTanashchuk/rust_graphql_nft"
readme = "README.md"
license = "MIT"
keywords = ["rust", "graphql", "nft", "ipfs", "actix"]
categories = ["web-programming"]

[dependencies]
dotenv = "0.15.0"

web3 = "0.18.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mime = "0.3.16"

async-graphql = "4.0"
tokio = { version = "1.21.2", features = ["full"] }
reqwest = "0.11.12"
futures = "0.3.24"

async-graphql-actix-web = "4.0"
actix-web = { version = "4.0.1", default-features = false, features = [
    "macros",
] }

anyhow = "1.0.65"
async-trait = "0.1.57"

[dev-dependencies]
tokio-test = "0.4.2"

[profile.release]
lto = "fat"
codegen-units = 1
